# pipecat-cloud-simple-chatbot

./: README.md  package-lock.json  run.sh
client-react/: Dockerfile  README.md  env.local.example  fly.toml  package-lock.json  package.json
client-react/src/app/: layout.tsx  page.tsx
client-react/src/app/api/connect/: route.ts
client-react/src/components/: ConfigDisplay.tsx  ConnectButton.tsx  DebugDisplay.tsx
client-react/src/providers/: PipecatProvider.tsx  RTVIProvider.tsx
server/: DATADOG_SETUP.md  DATADOG_TRACE_LOGS.md  Dockerfile  bot.py  build.sh  datadog.yaml  demo-server.py  env.example  local-server.py  pcc-deploy.toml  pre-app.sh  pyproject.toml  requirements.txt  server.py  unified-server.py  webhook-server.py
server/python.d/: conf.yaml
